--- a/FaceTube/FaceTube/Info.plist
+++ b/FaceTube/FaceTube/Info.plist
@@ -58,6 +58,8 @@
 	<string>FTube</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>facebook.com</key>
